GH-104 Fixed returned type for search projects.
